# aws-vault-shuffle

./: .gitignore  Pipfile  README.md  config.example.yml  pyproject.toml
.claude/: decisions.md  prompts.md  settings.local.json
scripts/: run_tests.sh
src/aws_vault_shuffle/: __init__.py  __version__.py  cli.py
src/aws_vault_shuffle/application/: __init__.py  inventory_service.py
src/aws_vault_shuffle/domain/: __init__.py  config.py  vault.py
src/aws_vault_shuffle/infrastructure/: __init__.py  aws_backup_adapter.py  config_loader.py
tests/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_cli.py
tests/unit/application/: __init__.py  test_inventory_service.py
tests/unit/domain/: __init__.py  test_config.py  test_vault.py
tests/unit/infrastructure/: __init__.py  test_config_loader.py
